lab3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    THEN

Grammar

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> CODE_BLOCK
Rule 2     CODE_BLOCK -> CODE_BLOCK LBRACE CODE_BLOCK RBRACE
Rule 3     CODE_BLOCK -> LBRACE CODE_BLOCK RBRACE
Rule 4     CODE_BLOCK -> CODE_BLOCK instruction
Rule 5     CODE_BLOCK -> instruction
Rule 6     instruction -> statement SEMICOLON
Rule 7     instruction -> if_statement
Rule 8     instruction -> while_statement
Rule 9     instruction -> for_statement
Rule 10    statement -> assignment
Rule 11    statement -> keyword
Rule 12    assignment -> variable assignment_operator expression
Rule 13    variable -> ID
Rule 14    variable -> variable_attribute
Rule 15    variable_attribute -> ID LSQUARE sequence RSQUARE
Rule 16    sequence -> sequence COMMA expression
Rule 17    sequence -> expression
Rule 18    value -> FLOAT
Rule 19    value -> INT
Rule 20    value -> STRING
Rule 21    value -> matrix
Rule 22    value -> variable_attribute
Rule 23    matrix -> LSQUARE rows RSQUARE
Rule 24    rows -> rows SEMICOLON sequence
Rule 25    rows -> sequence
Rule 26    expression -> value
Rule 27    expression -> ID
Rule 28    expression -> MINUS expression
Rule 29    expression -> ID TRANSPOSITION
Rule 30    expression -> LBRACKET expression RBRACKET TRANSPOSITION
Rule 31    expression -> LBRACKET expression RBRACKET
Rule 32    expression -> expression PLUS expression
Rule 33    expression -> expression MINUS expression
Rule 34    expression -> expression TIMES expression
Rule 35    expression -> expression DIVIDE expression
Rule 36    expression -> expression MPLUS expression
Rule 37    expression -> expression MMINUS expression
Rule 38    expression -> expression MTIMES expression
Rule 39    expression -> expression MDIVIDE expression
Rule 40    expression -> function LBRACKET expression RBRACKET
Rule 41    expression -> function LBRACKET sequence RBRACKET
Rule 42    keyword -> PRINT sequence
Rule 43    keyword -> BREAK
Rule 44    keyword -> CONTINUE
Rule 45    keyword -> RETURN expression
Rule 46    relation -> expression logic_operator expression
Rule 47    body -> LBRACE CODE_BLOCK RBRACE
Rule 48    body -> instruction
Rule 49    if_statement -> IF LBRACKET relation RBRACKET body
Rule 50    if_statement -> IF LBRACKET relation RBRACKET body ELSE body
Rule 51    while_statement -> WHILE LBRACKET relation RBRACKET body
Rule 52    for_statement -> FOR ID ASSIGN range body
Rule 53    range -> expression RANGE expression RANGE expression
Rule 54    range -> expression RANGE expression
Rule 55    assignment_operator -> ASSIGN
Rule 56    assignment_operator -> ADD_ASSIGN
Rule 57    assignment_operator -> SUBSTRACT_ASSIGN
Rule 58    assignment_operator -> MULTIPLY_ASSIGN
Rule 59    assignment_operator -> DIVIDE_ASSIGN
Rule 60    logic_operator -> LESSER
Rule 61    logic_operator -> GREATER
Rule 62    logic_operator -> EQUALS
Rule 63    logic_operator -> NOT_EQUALS
Rule 64    logic_operator -> LESSER_EQUALS
Rule 65    logic_operator -> GREATER_EQUALS
Rule 66    function -> EYE
Rule 67    function -> ZEROS
Rule 68    function -> ONES

Terminals, with rules where they appear

ADD_ASSIGN           : 56
ASSIGN               : 52 55
BREAK                : 43
COMMA                : 16
COMMENT              : 
CONTINUE             : 44
DIVIDE               : 35
DIVIDE_ASSIGN        : 59
ELSE                 : 50
EQUALS               : 62
EYE                  : 66
FLOAT                : 18
FOR                  : 52
GREATER              : 61
GREATER_EQUALS       : 65
ID                   : 13 15 27 29 52
IF                   : 49 50
INT                  : 19
LBRACE               : 2 3 47
LBRACKET             : 30 31 40 41 49 50 51
LESSER               : 60
LESSER_EQUALS        : 64
LSQUARE              : 15 23
MDIVIDE              : 39
MINUS                : 28 33
MMINUS               : 37
MPLUS                : 36
MTIMES               : 38
MULTIPLY_ASSIGN      : 58
NOT_EQUALS           : 63
ONES                 : 68
PLUS                 : 32
PRINT                : 42
RANGE                : 53 53 54
RBRACE               : 2 3 47
RBRACKET             : 30 31 40 41 49 50 51
RETURN               : 45
RSQUARE              : 15 23
SEMICOLON            : 6 24
STRING               : 20
SUBSTRACT_ASSIGN     : 57
THEN                 : 
TIMES                : 34
TRANSPOSITION        : 29 30
WHILE                : 51
ZEROS                : 67
error                : 

Nonterminals, with rules where they appear

CODE_BLOCK           : 1 2 2 3 4 47
PROGRAM              : 0
assignment           : 10
assignment_operator  : 12
body                 : 49 50 50 51 52
expression           : 12 16 17 28 30 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 45 46 46 53 53 53 54 54
for_statement        : 9
function             : 40 41
if_statement         : 7
instruction          : 4 5 48
keyword              : 11
logic_operator       : 46
matrix               : 21
range                : 52
relation             : 49 50 51
rows                 : 23 24
sequence             : 15 16 24 25 41 42
statement            : 6
value                : 26
variable             : 12
variable_attribute   : 14 22
while_statement      : 8

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . CODE_BLOCK
    (2) CODE_BLOCK -> . CODE_BLOCK LBRACE CODE_BLOCK RBRACE
    (3) CODE_BLOCK -> . LBRACE CODE_BLOCK RBRACE
    (4) CODE_BLOCK -> . CODE_BLOCK instruction
    (5) CODE_BLOCK -> . instruction
    (6) instruction -> . statement SEMICOLON
    (7) instruction -> . if_statement
    (8) instruction -> . while_statement
    (9) instruction -> . for_statement
    (10) statement -> . assignment
    (11) statement -> . keyword
    (49) if_statement -> . IF LBRACKET relation RBRACKET body
    (50) if_statement -> . IF LBRACKET relation RBRACKET body ELSE body
    (51) while_statement -> . WHILE LBRACKET relation RBRACKET body
    (52) for_statement -> . FOR ID ASSIGN range body
    (12) assignment -> . variable assignment_operator expression
    (42) keyword -> . PRINT sequence
    (43) keyword -> . BREAK
    (44) keyword -> . CONTINUE
    (45) keyword -> . RETURN expression
    (13) variable -> . ID
    (14) variable -> . variable_attribute
    (15) variable_attribute -> . ID LSQUARE sequence RSQUARE

    LBRACE          shift and go to state 3
    IF              shift and go to state 11
    WHILE           shift and go to state 12
    FOR             shift and go to state 13
    PRINT           shift and go to state 16
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    RETURN          shift and go to state 19
    ID              shift and go to state 14

    PROGRAM                        shift and go to state 1
    CODE_BLOCK                     shift and go to state 2
    instruction                    shift and go to state 4
    statement                      shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    for_statement                  shift and go to state 8
    assignment                     shift and go to state 9
    keyword                        shift and go to state 10
    variable                       shift and go to state 15
    variable_attribute             shift and go to state 20

state 1

    (0) S' -> PROGRAM .



state 2

    (1) PROGRAM -> CODE_BLOCK .
    (2) CODE_BLOCK -> CODE_BLOCK . LBRACE CODE_BLOCK RBRACE
    (4) CODE_BLOCK -> CODE_BLOCK . instruction
    (6) instruction -> . statement SEMICOLON
    (7) instruction -> . if_statement
    (8) instruction -> . while_statement
    (9) instruction -> . for_statement
    (10) statement -> . assignment
    (11) statement -> . keyword
    (49) if_statement -> . IF LBRACKET relation RBRACKET body
    (50) if_statement -> . IF LBRACKET relation RBRACKET body ELSE body
    (51) while_statement -> . WHILE LBRACKET relation RBRACKET body
    (52) for_statement -> . FOR ID ASSIGN range body
    (12) assignment -> . variable assignment_operator expression
    (42) keyword -> . PRINT sequence
    (43) keyword -> . BREAK
    (44) keyword -> . CONTINUE
    (45) keyword -> . RETURN expression
    (13) variable -> . ID
    (14) variable -> . variable_attribute
    (15) variable_attribute -> . ID LSQUARE sequence RSQUARE

    $end            reduce using rule 1 (PROGRAM -> CODE_BLOCK .)
    LBRACE          shift and go to state 21
    IF              shift and go to state 11
    WHILE           shift and go to state 12
    FOR             shift and go to state 13
    PRINT           shift and go to state 16
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    RETURN          shift and go to state 19
    ID              shift and go to state 14

    instruction                    shift and go to state 22
    statement                      shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    for_statement                  shift and go to state 8
    assignment                     shift and go to state 9
    keyword                        shift and go to state 10
    variable                       shift and go to state 15
    variable_attribute             shift and go to state 20

state 3

    (3) CODE_BLOCK -> LBRACE . CODE_BLOCK RBRACE
    (2) CODE_BLOCK -> . CODE_BLOCK LBRACE CODE_BLOCK RBRACE
    (3) CODE_BLOCK -> . LBRACE CODE_BLOCK RBRACE
    (4) CODE_BLOCK -> . CODE_BLOCK instruction
    (5) CODE_BLOCK -> . instruction
    (6) instruction -> . statement SEMICOLON
    (7) instruction -> . if_statement
    (8) instruction -> . while_statement
    (9) instruction -> . for_statement
    (10) statement -> . assignment
    (11) statement -> . keyword
    (49) if_statement -> . IF LBRACKET relation RBRACKET body
    (50) if_statement -> . IF LBRACKET relation RBRACKET body ELSE body
    (51) while_statement -> . WHILE LBRACKET relation RBRACKET body
    (52) for_statement -> . FOR ID ASSIGN range body
    (12) assignment -> . variable assignment_operator expression
    (42) keyword -> . PRINT sequence
    (43) keyword -> . BREAK
    (44) keyword -> . CONTINUE
    (45) keyword -> . RETURN expression
    (13) variable -> . ID
    (14) variable -> . variable_attribute
    (15) variable_attribute -> . ID LSQUARE sequence RSQUARE

    LBRACE          shift and go to state 3
    IF              shift and go to state 11
    WHILE           shift and go to state 12
    FOR             shift and go to state 13
    PRINT           shift and go to state 16
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    RETURN          shift and go to state 19
    ID              shift and go to state 14

    CODE_BLOCK                     shift and go to state 23
    instruction                    shift and go to state 4
    statement                      shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    for_statement                  shift and go to state 8
    assignment                     shift and go to state 9
    keyword                        shift and go to state 10
    variable                       shift and go to state 15
    variable_attribute             shift and go to state 20

state 4

    (5) CODE_BLOCK -> instruction .

    LBRACE          reduce using rule 5 (CODE_BLOCK -> instruction .)
    IF              reduce using rule 5 (CODE_BLOCK -> instruction .)
    WHILE           reduce using rule 5 (CODE_BLOCK -> instruction .)
    FOR             reduce using rule 5 (CODE_BLOCK -> instruction .)
    PRINT           reduce using rule 5 (CODE_BLOCK -> instruction .)
    BREAK           reduce using rule 5 (CODE_BLOCK -> instruction .)
    CONTINUE        reduce using rule 5 (CODE_BLOCK -> instruction .)
    RETURN          reduce using rule 5 (CODE_BLOCK -> instruction .)
    ID              reduce using rule 5 (CODE_BLOCK -> instruction .)
    $end            reduce using rule 5 (CODE_BLOCK -> instruction .)
    RBRACE          reduce using rule 5 (CODE_BLOCK -> instruction .)


state 5

    (6) instruction -> statement . SEMICOLON

    SEMICOLON       shift and go to state 24


state 6

    (7) instruction -> if_statement .

    LBRACE          reduce using rule 7 (instruction -> if_statement .)
    IF              reduce using rule 7 (instruction -> if_statement .)
    WHILE           reduce using rule 7 (instruction -> if_statement .)
    FOR             reduce using rule 7 (instruction -> if_statement .)
    PRINT           reduce using rule 7 (instruction -> if_statement .)
    BREAK           reduce using rule 7 (instruction -> if_statement .)
    CONTINUE        reduce using rule 7 (instruction -> if_statement .)
    RETURN          reduce using rule 7 (instruction -> if_statement .)
    ID              reduce using rule 7 (instruction -> if_statement .)
    $end            reduce using rule 7 (instruction -> if_statement .)
    RBRACE          reduce using rule 7 (instruction -> if_statement .)
    ELSE            reduce using rule 7 (instruction -> if_statement .)


state 7

    (8) instruction -> while_statement .

    LBRACE          reduce using rule 8 (instruction -> while_statement .)
    IF              reduce using rule 8 (instruction -> while_statement .)
    WHILE           reduce using rule 8 (instruction -> while_statement .)
    FOR             reduce using rule 8 (instruction -> while_statement .)
    PRINT           reduce using rule 8 (instruction -> while_statement .)
    BREAK           reduce using rule 8 (instruction -> while_statement .)
    CONTINUE        reduce using rule 8 (instruction -> while_statement .)
    RETURN          reduce using rule 8 (instruction -> while_statement .)
    ID              reduce using rule 8 (instruction -> while_statement .)
    $end            reduce using rule 8 (instruction -> while_statement .)
    RBRACE          reduce using rule 8 (instruction -> while_statement .)
    ELSE            reduce using rule 8 (instruction -> while_statement .)


state 8

    (9) instruction -> for_statement .

    LBRACE          reduce using rule 9 (instruction -> for_statement .)
    IF              reduce using rule 9 (instruction -> for_statement .)
    WHILE           reduce using rule 9 (instruction -> for_statement .)
    FOR             reduce using rule 9 (instruction -> for_statement .)
    PRINT           reduce using rule 9 (instruction -> for_statement .)
    BREAK           reduce using rule 9 (instruction -> for_statement .)
    CONTINUE        reduce using rule 9 (instruction -> for_statement .)
    RETURN          reduce using rule 9 (instruction -> for_statement .)
    ID              reduce using rule 9 (instruction -> for_statement .)
    $end            reduce using rule 9 (instruction -> for_statement .)
    RBRACE          reduce using rule 9 (instruction -> for_statement .)
    ELSE            reduce using rule 9 (instruction -> for_statement .)


state 9

    (10) statement -> assignment .

    SEMICOLON       reduce using rule 10 (statement -> assignment .)


state 10

    (11) statement -> keyword .

    SEMICOLON       reduce using rule 11 (statement -> keyword .)


state 11

    (49) if_statement -> IF . LBRACKET relation RBRACKET body
    (50) if_statement -> IF . LBRACKET relation RBRACKET body ELSE body

    LBRACKET        shift and go to state 25


state 12

    (51) while_statement -> WHILE . LBRACKET relation RBRACKET body

    LBRACKET        shift and go to state 26


state 13

    (52) for_statement -> FOR . ID ASSIGN range body

    ID              shift and go to state 27


state 14

    (13) variable -> ID .
    (15) variable_attribute -> ID . LSQUARE sequence RSQUARE

    ASSIGN          reduce using rule 13 (variable -> ID .)
    ADD_ASSIGN      reduce using rule 13 (variable -> ID .)
    SUBSTRACT_ASSIGN reduce using rule 13 (variable -> ID .)
    MULTIPLY_ASSIGN reduce using rule 13 (variable -> ID .)
    DIVIDE_ASSIGN   reduce using rule 13 (variable -> ID .)
    LSQUARE         shift and go to state 28


state 15

    (12) assignment -> variable . assignment_operator expression
    (55) assignment_operator -> . ASSIGN
    (56) assignment_operator -> . ADD_ASSIGN
    (57) assignment_operator -> . SUBSTRACT_ASSIGN
    (58) assignment_operator -> . MULTIPLY_ASSIGN
    (59) assignment_operator -> . DIVIDE_ASSIGN

    ASSIGN          shift and go to state 30
    ADD_ASSIGN      shift and go to state 31
    SUBSTRACT_ASSIGN shift and go to state 32
    MULTIPLY_ASSIGN shift and go to state 33
    DIVIDE_ASSIGN   shift and go to state 34

    assignment_operator            shift and go to state 29

state 16

    (42) keyword -> PRINT . sequence
    (16) sequence -> . sequence COMMA expression
    (17) sequence -> . expression
    (26) expression -> . value
    (27) expression -> . ID
    (28) expression -> . MINUS expression
    (29) expression -> . ID TRANSPOSITION
    (30) expression -> . LBRACKET expression RBRACKET TRANSPOSITION
    (31) expression -> . LBRACKET expression RBRACKET
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression TIMES expression
    (35) expression -> . expression DIVIDE expression
    (36) expression -> . expression MPLUS expression
    (37) expression -> . expression MMINUS expression
    (38) expression -> . expression MTIMES expression
    (39) expression -> . expression MDIVIDE expression
    (40) expression -> . function LBRACKET expression RBRACKET
    (41) expression -> . function LBRACKET sequence RBRACKET
    (18) value -> . FLOAT
    (19) value -> . INT
    (20) value -> . STRING
    (21) value -> . matrix
    (22) value -> . variable_attribute
    (66) function -> . EYE
    (67) function -> . ZEROS
    (68) function -> . ONES
    (23) matrix -> . LSQUARE rows RSQUARE
    (15) variable_attribute -> . ID LSQUARE sequence RSQUARE

    ID              shift and go to state 38
    MINUS           shift and go to state 39
    LBRACKET        shift and go to state 40
    FLOAT           shift and go to state 42
    INT             shift and go to state 43
    STRING          shift and go to state 44
    EYE             shift and go to state 47
    ZEROS           shift and go to state 48
    ONES            shift and go to state 49
    LSQUARE         shift and go to state 50

    sequence                       shift and go to state 35
    expression                     shift and go to state 36
    value                          shift and go to state 37
    function                       shift and go to state 41
    matrix                         shift and go to state 45
    variable_attribute             shift and go to state 46

state 17

    (43) keyword -> BREAK .

    SEMICOLON       reduce using rule 43 (keyword -> BREAK .)


state 18

    (44) keyword -> CONTINUE .

    SEMICOLON       reduce using rule 44 (keyword -> CONTINUE .)


state 19

    (45) keyword -> RETURN . expression
    (26) expression -> . value
    (27) expression -> . ID
    (28) expression -> . MINUS expression
    (29) expression -> . ID TRANSPOSITION
    (30) expression -> . LBRACKET expression RBRACKET TRANSPOSITION
    (31) expression -> . LBRACKET expression RBRACKET
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression TIMES expression
    (35) expression -> . expression DIVIDE expression
    (36) expression -> . expression MPLUS expression
    (37) expression -> . expression MMINUS expression
    (38) expression -> . expression MTIMES expression
    (39) expression -> . expression MDIVIDE expression
    (40) expression -> . function LBRACKET expression RBRACKET
    (41) expression -> . function LBRACKET sequence RBRACKET
    (18) value -> . FLOAT
    (19) value -> . INT
    (20) value -> . STRING
    (21) value -> . matrix
    (22) value -> . variable_attribute
    (66) function -> . EYE
    (67) function -> . ZEROS
    (68) function -> . ONES
    (23) matrix -> . LSQUARE rows RSQUARE
    (15) variable_attribute -> . ID LSQUARE sequence RSQUARE

    ID              shift and go to state 38
    MINUS           shift and go to state 39
    LBRACKET        shift and go to state 40
    FLOAT           shift and go to state 42
    INT             shift and go to state 43
    STRING          shift and go to state 44
    EYE             shift and go to state 47
    ZEROS           shift and go to state 48
    ONES            shift and go to state 49
    LSQUARE         shift and go to state 50

    expression                     shift and go to state 51
    value                          shift and go to state 37
    function                       shift and go to state 41
    matrix                         shift and go to state 45
    variable_attribute             shift and go to state 46

state 20

    (14) variable -> variable_attribute .

    ASSIGN          reduce using rule 14 (variable -> variable_attribute .)
    ADD_ASSIGN      reduce using rule 14 (variable -> variable_attribute .)
    SUBSTRACT_ASSIGN reduce using rule 14 (variable -> variable_attribute .)
    MULTIPLY_ASSIGN reduce using rule 14 (variable -> variable_attribute .)
    DIVIDE_ASSIGN   reduce using rule 14 (variable -> variable_attribute .)


state 21

    (2) CODE_BLOCK -> CODE_BLOCK LBRACE . CODE_BLOCK RBRACE
    (2) CODE_BLOCK -> . CODE_BLOCK LBRACE CODE_BLOCK RBRACE
    (3) CODE_BLOCK -> . LBRACE CODE_BLOCK RBRACE
    (4) CODE_BLOCK -> . CODE_BLOCK instruction
    (5) CODE_BLOCK -> . instruction
    (6) instruction -> . statement SEMICOLON
    (7) instruction -> . if_statement
    (8) instruction -> . while_statement
    (9) instruction -> . for_statement
    (10) statement -> . assignment
    (11) statement -> . keyword
    (49) if_statement -> . IF LBRACKET relation RBRACKET body
    (50) if_statement -> . IF LBRACKET relation RBRACKET body ELSE body
    (51) while_statement -> . WHILE LBRACKET relation RBRACKET body
    (52) for_statement -> . FOR ID ASSIGN range body
    (12) assignment -> . variable assignment_operator expression
    (42) keyword -> . PRINT sequence
    (43) keyword -> . BREAK
    (44) keyword -> . CONTINUE
    (45) keyword -> . RETURN expression
    (13) variable -> . ID
    (14) variable -> . variable_attribute
    (15) variable_attribute -> . ID LSQUARE sequence RSQUARE

    LBRACE          shift and go to state 3
    IF              shift and go to state 11
    WHILE           shift and go to state 12
    FOR             shift and go to state 13
    PRINT           shift and go to state 16
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    RETURN          shift and go to state 19
    ID              shift and go to state 14

    CODE_BLOCK                     shift and go to state 52
    instruction                    shift and go to state 4
    statement                      shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    for_statement                  shift and go to state 8
    assignment                     shift and go to state 9
    keyword                        shift and go to state 10
    variable                       shift and go to state 15
    variable_attribute             shift and go to state 20

state 22

    (4) CODE_BLOCK -> CODE_BLOCK instruction .

    LBRACE          reduce using rule 4 (CODE_BLOCK -> CODE_BLOCK instruction .)
    IF              reduce using rule 4 (CODE_BLOCK -> CODE_BLOCK instruction .)
    WHILE           reduce using rule 4 (CODE_BLOCK -> CODE_BLOCK instruction .)
    FOR             reduce using rule 4 (CODE_BLOCK -> CODE_BLOCK instruction .)
    PRINT           reduce using rule 4 (CODE_BLOCK -> CODE_BLOCK instruction .)
    BREAK           reduce using rule 4 (CODE_BLOCK -> CODE_BLOCK instruction .)
    CONTINUE        reduce using rule 4 (CODE_BLOCK -> CODE_BLOCK instruction .)
    RETURN          reduce using rule 4 (CODE_BLOCK -> CODE_BLOCK instruction .)
    ID              reduce using rule 4 (CODE_BLOCK -> CODE_BLOCK instruction .)
    $end            reduce using rule 4 (CODE_BLOCK -> CODE_BLOCK instruction .)
    RBRACE          reduce using rule 4 (CODE_BLOCK -> CODE_BLOCK instruction .)


state 23

    (3) CODE_BLOCK -> LBRACE CODE_BLOCK . RBRACE
    (2) CODE_BLOCK -> CODE_BLOCK . LBRACE CODE_BLOCK RBRACE
    (4) CODE_BLOCK -> CODE_BLOCK . instruction
    (6) instruction -> . statement SEMICOLON
    (7) instruction -> . if_statement
    (8) instruction -> . while_statement
    (9) instruction -> . for_statement
    (10) statement -> . assignment
    (11) statement -> . keyword
    (49) if_statement -> . IF LBRACKET relation RBRACKET body
    (50) if_statement -> . IF LBRACKET relation RBRACKET body ELSE body
    (51) while_statement -> . WHILE LBRACKET relation RBRACKET body
    (52) for_statement -> . FOR ID ASSIGN range body
    (12) assignment -> . variable assignment_operator expression
    (42) keyword -> . PRINT sequence
    (43) keyword -> . BREAK
    (44) keyword -> . CONTINUE
    (45) keyword -> . RETURN expression
    (13) variable -> . ID
    (14) variable -> . variable_attribute
    (15) variable_attribute -> . ID LSQUARE sequence RSQUARE

    RBRACE          shift and go to state 53
    LBRACE          shift and go to state 21
    IF              shift and go to state 11
    WHILE           shift and go to state 12
    FOR             shift and go to state 13
    PRINT           shift and go to state 16
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    RETURN          shift and go to state 19
    ID              shift and go to state 14

    instruction                    shift and go to state 22
    statement                      shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    for_statement                  shift and go to state 8
    assignment                     shift and go to state 9
    keyword                        shift and go to state 10
    variable                       shift and go to state 15
    variable_attribute             shift and go to state 20

state 24

    (6) instruction -> statement SEMICOLON .

    LBRACE          reduce using rule 6 (instruction -> statement SEMICOLON .)
    IF              reduce using rule 6 (instruction -> statement SEMICOLON .)
    WHILE           reduce using rule 6 (instruction -> statement SEMICOLON .)
    FOR             reduce using rule 6 (instruction -> statement SEMICOLON .)
    PRINT           reduce using rule 6 (instruction -> statement SEMICOLON .)
    BREAK           reduce using rule 6 (instruction -> statement SEMICOLON .)
    CONTINUE        reduce using rule 6 (instruction -> statement SEMICOLON .)
    RETURN          reduce using rule 6 (instruction -> statement SEMICOLON .)
    ID              reduce using rule 6 (instruction -> statement SEMICOLON .)
    $end            reduce using rule 6 (instruction -> statement SEMICOLON .)
    RBRACE          reduce using rule 6 (instruction -> statement SEMICOLON .)
    ELSE            reduce using rule 6 (instruction -> statement SEMICOLON .)


state 25
